gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/attr-misuse.rs
#![feature(const_trait_impl)]

#[const_trait]
trait A {
    #[const_trait] // { dg-error "" "" { target *-*-* } }
    fn foo(self);
}

#[const_trait] // { dg-error "" "" { target *-*-* } }
fn main() {}

